--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 sudo: required
 dist: trusty
+group: deprecated-2017Q2
 language: java
 jdk:
   - oraclejdk8
@@ -36,7 +37,7 @@ script:
 before_install:
   # This must match the dev-resources version from the parent pom:
   - export DEV_RESOURCES_VERSION=1.2
-  - export MAVEN_OPTS="-XX:CompressedClassSpaceSize=256m -XX:+UseSerialGC -Xmx2g -XX:MaxMetaspaceSize=512m -Dorg.slf4j.simpleLogger.defaultLogLevel=warn"
+  - export MAVEN_OPTS="-XX:CompressedClassSpaceSize=1g -XX:+UseSerialGC -Xmx2g -XX:MaxMetaspaceSize=1g -Dorg.slf4j.simpleLogger.defaultLogLevel=warn"
   - chmod +x .utility/pull-dev-resources.sh
   - chmod +x .utility/run-tests.sh
   - chmod +x .utility/build-docs.sh
